@@ -3,12 +3,6 @@
 
 ---
 
-## 🖼️ Preview
-*(Optional — add a screenshot here once you push your project)*  
-![Connect Four JavaFX Screenshot](screenshot.png)
-
----
-
 ## 🚀 Features
 ✅ JavaFX UI — rich, interactive interface  
 ✅ Animated Gameplay — smooth falling piece animation  
@@ -31,26 +25,6 @@
 - Java JDK 17+ (Java 24 recommended)  
 - JavaFX SDK 25.0.1  
 - IntelliJ IDEA  
-
----
-
-## 🧩 Setup Instructions
-
-### 🪜 Step 1 — Download JavaFX SDK
-1. Visit [https://openjfx.io](https://openjfx.io).  
-2. Download **JavaFX SDK 25.0.1** for your OS.  
-3. Unzip to: `C:\Users\Nicholas\Desktop\JavaFX\javafx-sdk-25.0.1`  
-
-### ⚙️ Step 2 — Configure IntelliJ
-1. Go to **File → Project Structure → Libraries → + → Java**  
-2. Select your JavaFX `lib` folder.  
-3. In **Run → Edit Configurations → VM Options**, add:  
-   ```
-   --module-path "C:\Users\Nicholas\Desktop\JavaFX\javafx-sdk-25.0.1\lib" --add-modules javafx.controls,javafx.fxml
-   ```
-
-### ▶️ Step 3 — Run the App
-Run the `Main` class — enjoy smooth, animated Connect Four gameplay! 🎮
 
 ---
 
